# wp-enhanced

./: .gitignore  README.md  pyproject.toml
ci/: publish.bat
src/wpe/: build_agent.py  cli.py  constants.py  core.py  deploy_target.py  deployment.py  global_config.py  hook_processor.py  jb_run_manager.py  parameter.py  pathman.py  plugin_test_runner.py  project_config.py  renamer.py  test_runner.py  util.py  wp_wrapper.py
src/wpe/templates/: premakePlugins.lua
src/wpe/templates/.wpe/: wpe_parameters.toml  wpe_project.toml
src/wpe/templates/.wpe/hooks/: post_build.py  pre_full_pack.py  pre_premake.py
src/wpe/templates/SoundEnginePlugin/: ProjectName.cpp  ProjectName.h  ProjectNameFXParams.cpp  ProjectNameFXParams.h  ProjectNameMeta.cpp  ProjectNameMeta.h  ProjectNameParams.cpp  ProjectNameParams.h
src/wpe/templates/WwisePlugin/: ProjectName.rc  ProjectName.xml  ProjectNamePlugin.cpp  ProjectNamePlugin.h  resource.h
src/wpe/templates/WwisePlugin/Win32/: ProjectNamePluginGUI.cpp  ProjectNamePluginGUI.h
src/wpe/templates/_idea/: JetBrainsRunConfig.xml
src/wpe/templates/test/: CMakeLists.txt  main.cpp
src/wpe/templates/test/util/: test_util.hpp
src/wpe/test/util/: test_mem_alloc.hpp
src/wpe/wp_patch/: build.py  package.py  premake.py  premakePlugins.lua
src/wpe/wp_patch/common/command/: android.py
src/wpe/wp_patch/common/platform/: __init__.py  android.py  ps5.py
src/wpe/wp_subcommand_patched/: package.py
tests/: test_actions.py
tests/org/pure_wp/TestPlugin/: PremakePlugin.lua
tests/org/pure_wp/TestPlugin/FactoryAssets/: Manifest.xml
tests/org/pure_wp/TestPlugin/SoundEnginePlugin/: TestPluginFX.h  TestPluginFXFactory.h  TestPluginFXShared.cpp
tests/org/pure_wp/TestPlugin/WwisePlugin/: TestPlugin.xml
tests/org/pure_wp/TestPlugin/WwisePlugin/Win32/: TestPluginPluginGUI.h
tests/org/wpe_integrated/TestPlugin/: .gitignore  TestPluginConfig.h  additional_artifacts.json  bundle_template.json
tests/org/wpe_integrated/TestPlugin/.wpe/: wpe_project.toml
tests/org/wpe_integrated/TestPlugin/.wpe/hooks/: pre_full_pack.py
tests/org/wpe_integrated/TestPlugin/SoundEnginePlugin/: TestPluginFX.cpp  TestPluginFXParams.cpp  TestPluginFXParams.h
tests/org/wpe_integrated/TestPlugin/WwisePlugin/: TestPlugin.def  TestPluginPlugin.cpp  TestPluginPlugin.h
tests/org/wpe_integrated/generate_parameters_expected/SoundEnginePlugin/: TestPluginFXParams.cpp  TestPluginFXParams.h
tests/org/wpe_integrated/generate_parameters_expected/WwisePlugin/: TestPlugin.rc  TestPlugin.xml  TestPluginPlugin.cpp  TestPluginPlugin.h  resource.h
(+11 files in other folders)
