[tool.poetry]
name = "wp-enhanced"
version = "0.5.4"
description = "Wrapper of `wp.py`. Easy to premake, build, and deploy wwise plugins."
authors = ["tgalpha <tanalpha.zhy@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "wpe", from = "src" }
]

repository = "https://github.com/tgalpha/wp-enhanced"

[tool.poetry.dependencies]
python = "^3.9"
kkpyutil = "^0.154.6"
markdown = "^3.4.4"
jinja2 = "^3.1.2"


[tool.poetry.scripts]
wpe = "wpe.cli:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
