[tool.poetry]
name = "wp-enhanced"
version = "0.11.0"
description = "Wrapper of `wp.py`. Easy to premake, build, and deploy wwise plugins."
authors = ["tgalpha <tanalpha.zhy@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "wpe", from = "src" }
]

repository = "https://github.com/tgalpha/wp-enhanced"

[tool.poetry.dependencies]
python = "^3.9"
kkpyutil = "^1.33.5"
markdown = "^3.4.4"
jinja2 = "^3.1.2"
requests = "^2.31.0"
lupa = "^2.1"
Flask = "^3.0.3"
werkzeug = "3.0.3"
packaging = "^24.1"
toml = "^0.10.2"


[tool.poetry.scripts]
wpe = "wpe.cli:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
